=== 1.1.4 (2019-07-17) ===
CHANGED: dependency maintenance

=== 1.1.3 (2019-01-11) ===
CHANGED: dependency maintenance
CHANGED: dropped Node v6 support

=== 1.1.2 (2018-06-15) ===
CHANGED: upgraded to latest FutoIn deps

=== 1.1.1 (2018-06-13) ===
NEW: futoin-invoker & futoin-executor v2 support

=== 1.1.0 (2018-06-06) ===
CHANGED: to use performance-enhanced futoin-asyncsteps v2

=== 1.0.2 (2018-06-03) ===
CHANGED: updated to futoin-eventstream v1.1 (incompatible changes)

=== 1.0.1 (2018-05-31) ===
FIXED: use of SV_DEL instead of SV_NEW event type
FIXED: to invalidate cache on stats update miss

=== 1.0.0 (2018-05-31) ===
CHANGED: to use secure buffer comparison from SpecTools
NEW: to support events as defined in FTN13 v1.1
NEW: FTN13 v1.1 addStats()
NEW: CachedStorageWrapper support

=== 0.9.7 (2018-05-20) ===
FIXED: to use gen_params.bits for derivedKey()
FIXED: to use UUID as IV for encryptedKey()

=== 0.9.6 (2018-05-18) ===
NEW: external key ID prefix for key listing
NEW: upgraded to FTN13 v1.1

=== 0.9.5 (2018-05-17) ===
NEW: plain "Password" plugin support
NEW: "HMAC" plugin support

=== 0.9.4 (2018-05-12) ===
CHANGED: to use FTN3.1 specs from invoker
FIXED: updated specs symlinks
FIXED: to add specs into release package

=== 0.9.3 (2018-05-11) ===
CHANGED: to use FTN13 v1.0 specs instead of v0.3

=== 0.9.2 (2018-04-23) ===
CHANGED: upgraded dependency versions

=== 0.9.1 (2018-02-13) ===
FIXED: to check failure limit on sign/verify

=== 0.9.0 (2018-02-12) ===
Initial version