@@ -51,7 +51,7 @@
     "grunt": "^1.0.4",
     "grunt-eslint": "^22.0.0",
     "grunt-jsdoc-to-markdown": "^4.0.0",
-    "grunt-mocha-istanbul": "^5.0.2",
+    "grunt-simple-nyc": "^3.0.0",
     "grunt-text-replace": "^0.4.0",
     "istanbul": "^0.4.5",
     "mocha": "^6.1.4"
