@@ -1,3 +1,6 @@
+=== (next) ===
+CHANGED: to use nyc instead of istanbul
+
 === 1.1.4 (2019-07-17) ===
 CHANGED: dependency maintenance
 
